[package]
name = "rust-bindgen-canonize"
version = "0.1.0"
authors = ["Matthew Collier <mcollier@digitalbazaar.com>"]
edition = "2018"

[profile.release.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib"]
[dependencies.node-bindgen]
version = "2.1.1"
features = []
[build_dependencies.node-bindgen]
version = "2.1.1"
features = ["build"]

[dependencies]
# rdf-canonize-rs = { git = "ssh://github.com/gannan08/rdf-canonize-rust.git", branch = "main" }
rdf-canonize-rs = { path = "../rdf-canonize-rust" }
